@@ -1,3 +1,10 @@
+2011-03-24 Philipp Klaus Krause <pkk AT spth.de>
+
+	* src/z80/ralloc.c,
+	  src/z80/gen.c,
+	  src/z80/ralloc2.cc:
+	  gbz80 fixes.
+
 2011-03-23 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>
 
 	* src/SDCCralloc.hpp,
